changed the spelling

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Tribute - Mother Teresa</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="page-header">
-        <h1 class="text-center text-uppercase">Mother Theresa</h1>
+        <h1 class="text-center text-uppercase">Mother Teresa</h1>
         <h4 class="text-center text-uppercase">26 August 1910 - 5 September 1997</h4>
     </div>
 
@@ -100,7 +100,7 @@
 
     <blockquote class="text-center">
         <h5>"Peace begins with a smile.."</h5>
-        <footer>Mother Theresa</footer>
+        <footer>Mother Teresa</footer>
     </blockquote>
 
 
