--- a/src/index.html
+++ b/src/index.html
@@ -30,20 +30,23 @@
           <img src="image.jpg" class="img-responsive" alt="Responsive image">
         </div>
         <div class="col-md-6 col-md-offset-1">
-          <h4 class="text-center">LIFE JOURNEY</h4>
-          <h5>Birth</h5>
+          <h3 class="text-center">LIFE JOURNEY</h3>
+
+          
+          <br>
+          <h4 class="text-uppercase">Birth</h4>
           <p class="text-primary">She was born in Skopje (now the capital of the Republic of Macedonia),
             then part of the Kosovo Vilayet of the Ottoman Empire.
           </p>
-          <h5>Foundations</h5>
+          <h4 class="text-uppercase">Foundations</h4>
           <p class="text-danger">In 1950 Teresa founded the Missionaries of Charity, a Roman Catholic religious
             congregation which had over 4,500 sisters and was active in 133 countries in 2012.
           </p>
-          <h5>Honours</h5>
+          <h4 class="text-uppercase">Honours</h4>
           <p class="text-primary">Teresa received a number of honours, including the 1962 Ramon Magsaysay Peace Prize
             and 1979 Nobel Peace Prize.
           </p>
-          <h5>Death</h5>
+          <h4 class="text-uppercase">Death</h4>
           <p class="text-danger">On 13 March 1997 Teresa resigned as head of the Missionaries of Charity,
             and she died on 5 September.
           </p>
