--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,8 @@
         <div class="col-md-6 col-md-offset-1">
           <h3 class="text-center">LIFE JOURNEY</h3>
 
-          
-          <br>
+
+
           <h4 class="text-uppercase">Birth</h4>
           <p class="text-primary">She was born in Skopje (now the capital of the Republic of Macedonia),
             then part of the Kosovo Vilayet of the Ottoman Empire.
@@ -56,7 +56,7 @@
     <br>
     <div class="container">
       <div class = "row">
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-6">
           <div class="thumbnail">
             <img  src="1.jpg" class="img-responsive" alt="Responsive image">
             <div class="caption">
@@ -66,7 +66,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-6">
           <div class="thumbnail">
             <img  src="2.jpg" class="img-responsive" alt="Responsive image">
             <div class="caption">
@@ -76,7 +76,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-6">
           <div class="thumbnail">
             <img src="3.jpg" class="img-responsive" alt="Responsive image">
             <div class="caption">
@@ -86,7 +86,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-xs-6">
           <div class="thumbnail">
             <img src="4.jpg" class="img-responsive" alt="Responsive image">
             <div class="caption">
